--- a/filter/main.tex
+++ b/filter/main.tex
@@ -190,7 +190,7 @@ EE1310/master/filter/codes/Sound_Noise.wav
 %\linebreak
 \item
 \label{prob:spectrogram}
-You will find a spectrogram at \href{https://academo.org/demos/spectrum-analyzer}{\url{https://academo.org/demos/spectrum-analyzer}}. 
+You will find a spectrogram at \href{https://academo.org/demos/spectrum-analyzer}{\url{https://academo.org/demos/spectrum-analyzer} }. 
 %\end{problem}
 %%
 %
@@ -250,6 +250,7 @@ wget https://github.com/gadepall/EE1310/raw/master/filter/codes/xnyn.py
 \label{fig:xnyn}	
 \end{figure}
 
+\item Repeat the above exercise using a C code.
 \end{enumerate}
 \section{$Z$-transform}
 \begin{enumerate}[label=\thesection.\arabic*]
