10082022 - 11.59 - Completed till section 3

--- a/filter/main.tex
+++ b/filter/main.tex
@@ -251,6 +251,11 @@ wget https://github.com/gadepall/EE1310/raw/master/filter/codes/xnyn.py
 \end{figure}
 
 \item Repeat the above exercise using a C code.
+\solution
+\begin{lstlisting}
+	wget https://github.com/DarkWake9/EE3900/blob/main/Assignment%201/e3-3.c
+\end{lstlisting}
+
 \end{enumerate}
 \section{$Z$-transform}
 \begin{enumerate}[label=\thesection.\arabic*]
